<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioCadastroActivity">

    <EditText
        android:id="@+id/activity_formulario_cadastro_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="#E4E4E4"
        android:hint="@string/formulario_nome_hint"
        android:textColorHighlight="#E4E4E4"
        android:textColorHint="#E4E4E4"
        android:textColorLink="#E4E4E4"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_formulario_cadastro_sobrenome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="#E4E4E4"
        android:hint="@string/formulario_sobrenome_hint"
        android:textColorHighlight="#E4E4E4"
        android:textColorHint="#E4E4E4"
        android:textColorLink="#E4E4E4"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_formulario_cadastro_data_nascimento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:backgroundTint="#E4E4E4"
        android:hint="@string/formulario_data_nascimento_hint"
        android:textColorHighlight="#E4E4E4"
        android:textColorHint="#E4E4E4"
        android:textColorLink="#E4E4E4"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/testeHUss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:background="#FFFFFF"
        android:foregroundGravity="center"
        android:progressTint="#e3e306"
        android:max="10"
        android:numStars="5"
        android:rating="4"
        android:stepSize="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/activity_formulario_cadastro_botao_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#F2985C"
        android:text="Salvar"
        android:textColor="#FADAC4"
        android:textSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/activity_formulario_cargo_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="230dp"
        android:text="@string/formulario_cardo_descricao"
        android:textColor="#DCDCDC"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_formulario_nivel_experiencia_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:text="@string/formulario_nivel_experiencia_hint"
        android:textColor="#E6E6E6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/activity_formulario_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/ic_action_expandir"
        android:scrollbarSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="290dp"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="280dp"
        android:src="@drawable/ic_action_expandir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
