<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.MainActivity">

        <ListView
            android:id="@+id/activity_main_listagem"
            android:layout_width="0dp"
            android:layout_height="380dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="340dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp">

        </ListView>

    <Button
        android:id="@+id/activity_novo_cadastro_fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/fundo"
        android:elevation="6dp"
        android:stateListAnimator="@null"
        android:text="+"
        android:textColor="#ffffff"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/activity_main_imagem_comercial"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/dinheiro" />

    <ImageView
        android:id="@+id/activity_main_imagem_suporte"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="130dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/atenderchamada" />

    <ImageView
        android:id="@+id/activity_main_imagem_administrativo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/grupo" />

    <TextView
        android:id="@+id/activity_main_descricao_comercial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="70dp"
        android:text="@string/descricao_comercial"
        android:textColor="#D9D9D9"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_comercial_resposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="90dp"
        android:hint="0"
        android:textColor="#D9D9D9"
        android:textColorHint="#D2D2D2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_desenvolvimento_resposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:hint="0"
        android:textColor="#D9D9D9"
        android:textColorHint="#d2d2d2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_comercial_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="190dp"
        android:text="@string/suporte_tecnico_descricao"
        android:textColor="#D9D9D9"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_suporte_resposta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="207dp"
        android:hint="0"
        android:textColor="#D9D9D9"
        android:textColorHint="#D2D2D2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_administrativo_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:text="@string/administrativo_descricao"
        android:textColor="#D9D9D9"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_administrativo_resposta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="207dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:hint="0"
        android:textColor="#D9D9D9"
        android:textColorHint="#D2D2D2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_main_imagem_desenvolvimento"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/pc" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="410dp"
        android:layout_height="70dp"
        android:layout_marginTop="270dp"
        android:background="#EBEBEB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/activity_main_star"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="290dp"
        android:foregroundGravity="center"
        android:max="10"
        android:numStars="5"
        android:progressTint="#e3e306"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:scrollbarFadeDuration="250"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_media_colaboradores_resultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="305dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:hint="0"
        android:textColor="#BDBCBC"
        android:textColorHint="#D2D2D2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_desenvolvimento_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/desenvolvimento_descricao"
        android:textColor="#D9D9D9"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="270dp"
        android:text="@string/colaboradores_descricao"
        android:textColor="#AFAEAE"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_main_colaboradores_resultados"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="105dp"
        android:layout_marginRight="105dp"
        android:hint="0"
        android:textColor="#BBBABA"
        android:textColorHint="#BFBEBE"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>